--- a/Personas/Personas.csproj
+++ b/Personas/Personas.csproj
@@ -87,6 +87,9 @@
     <Compile Include="modelo\Persona.cs" />
     <Compile Include="servicios\ServicioDatos.cs" />
     <Compile Include="servicios\ServicioNavegacion.cs" />
+    <Compile Include="vistas\AñadirDialog.xaml.cs">
+      <DependentUpon>AñadirDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="vms\MainWindowVM.cs" />
     <Page Include="contentcontrols\ListaPersonasControl.xaml">
       <SubType>Designer</SubType>
@@ -114,6 +117,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="vistas\AñadirDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -146,5 +153,6 @@
     <Resource Include="assets\añadir.ico" />
     <Resource Include="assets\personas.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
